@@ -14,6 +14,8 @@ Ctrlproxy 3.0.5 UNRELEASED
 
 	* Support prefixing all lines with the time ("report-time = always"). (#169)
 
+	* Allow using expansions in log file names for irssi. (#149)
+
   BUG FIXES
 
     * Handle 275 response correctly.
